deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-sample
  namespace: nginx-sample
  labels:
    app: nginx-sample
    app.kubernetes.io/name: nginx-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-sample
  template:
    metadata:
      labels:
        app: nginx-sample
      annotations:
        kubernetes.io/change-cause: 'New deployment'
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
  strategy:
    type: RollingUpdate
