service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-sample
  namespace: nginx-sample
spec:
  selector:
    app: nginx-sample
  ports:
    - port: 80
