ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-sample
  namespace: nginx-sample
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: true.loca.lt
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-sample
              port:
                number: 80
